--- a/app/views/public/favorites/favorites_all.html.erb
+++ b/app/views/public/favorites/favorites_all.html.erb
@@ -1,8 +1,10 @@
-<div class="btn-wrapper container">
-  <div class="row">
-    <h1>いいねした一覧</h1>
-    <div class="col-12 mx-auto">
-      <%= render 'public/relationships/customers_info', customers_info: @customers %>
+<div class="page-color">
+  <div class="btn-wrapper container">
+    <div class="row">
+      <h1>いいねした一覧</h1>
+      <div class="col-12 mx-auto">
+        <%= render 'public/relationships/customers_info', customers_info: @customers %>
+      </div>
     </div>
   </div>
 </div>
