--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <main class="<%= @index ? 'exercise_index' : '' %>">
+    <main>
       <%= render partial: "layouts/flash" %>
       <%= yield %>
     </main>
