--- a/app/views/public/exercises/edit.html.erb
+++ b/app/views/public/exercises/edit.html.erb
@@ -1,30 +1,34 @@
-<div class="btn-wrapper container">
-  <div class="row">
-    <h1>Edit exercise</h1>
-    <div class="col-12 mx-auto">
-      <%= form_with model: @exercise, url: exercise_path, method: :patch do |f| %>
-        <div class="content">
-          <table class="table">
-            <tr>
-              <th>投稿内容</th>
-              <td><%= f.text_area :body, class: "form-control", placeholder: "どうしたの？" %></td>
-            </tr>
-            <% if @exercise.body_images.present? %>
+<div class="page-color">
+  <div class="btn-wrapper container">
+    <div class="row">
+      <h1>Edit exercise</h1>
+      <div class="col-12 mx-auto">
+        <%= form_with model: @exercise, url: exercise_path, method: :patch do |f| %>
+          <div class="content">
+            <table class="table">
               <tr>
-                <th class="col-3">
-                  <% @exercise.body_images.each do |images| %>
-                    <%= image_tag @exercise.get_body_images(images, 100, 100) %>
-                  <% end %>
-                </th>
+                <th>投稿内容</th>
+                <td><%= f.text_area :body, class: "form-control", placeholder: "どうしたの？" %></td>
+              </tr>
+              <tr>
+                <% if @exercise.body_images.present? %>
+                  <th class="col-3">
+                    <% @exercise.body_images.each do |images| %>
+                      <%= image_tag @exercise.get_body_images(images, 100, 100) %>
+                    <% end %>
+                  </th>
+                <% else %>
+                  <th></th>
+                <% end %>
                 <td><%= f.file_field :body_images, accept: "image/*", multiple: true %></td>
               </tr>
-            <% end %>
-            <tr>
-              <th></th>
-              <td class="text-right"><%= f.submit "保存する", class: "btn btn-sm btn-info" %></td>
-            </tr>
-          </table>
-        <% end %>
+              <tr>
+                <th></th>
+                <td class="text-right"><%= f.submit "保存する", class: "btn btn-sm btn-info" %></td>
+              </tr>
+            </table>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
