--- a/app/views/public/favorites/ranking.html.erb
+++ b/app/views/public/favorites/ranking.html.erb
@@ -1,6 +1,8 @@
-<div class="btn-wrapper container">
-  <div class="row">
-    <h1>ランキング</h1>
-    <%= render 'public/exercises/index', exercises: @favorites_ranking %>
+<div class="page-color">
+  <div class="btn-wrapper container">
+    <div class="row">
+      <h1>ランキング</h1>
+      <%= render 'public/exercises/index', exercises: @favorites_ranking %>
+    </div>
   </div>
 </div>
