--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -1,12 +1,14 @@
-<div class="btn-wrapper container">
-  <div class="row">
-    <h1>フォロワー一覧</h1>
-    <div class="col-12 mx-auto ">
-      <% if @customer.followers.count == 0 %>
-        フォロワーはいません
-      <% else %>
-        <%= render 'public/relationships/customers_info', customers_info: @customers %>
-      <% end %>
+<div class="page-color">
+  <div class="btn-wrapper container">
+    <div class="row">
+      <h1>フォロワー一覧</h1>
+      <div class="col-12 mx-auto ">
+        <% if @customer.followers.count == 0 %>
+          フォロワーはいません
+        <% else %>
+          <%= render 'public/relationships/customers_info', customers_info: @customers %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
