--- a/app/views/public/relationships/followings.html.erb
+++ b/app/views/public/relationships/followings.html.erb
@@ -1,12 +1,15 @@
-<div class="btn-wrapper container">
-  <div class="row">
-    <h1>フォロー一覧</h1>
-    <div class="col-12 mx-auto">
-      <% if @customer.followings.count == 0 %>
-        フォローしている人はいません
-      <% else %>
-        <%= render 'public/relationships/customers_info', customers_info: @customers %>
-      <% end %>
+<div class="page-color">
+  <div class="btn-wrapper container">
+    <div class="row">
+      <h1>フォロー一覧</h1>
+      <div class="col-12 mx-auto">
+        <% if @customer.followings.count == 0 %>
+          フォローしている人はいません
+        <% else %>
+          <%= render 'public/relationships/customers_info', customers_info: @customers %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
+
