--- a/app/views/public/searches/index.html.erb
+++ b/app/views/public/searches/index.html.erb
@@ -1,23 +1,25 @@
-<div class="btn-wrapper container">
-  <div class="row">
-    <h1>検索結果</h1>
-    <div class="col-12 mx-auto">
-      <div class="content">
-        <p><%= @word %>の検索結果</p>
-        <% if @range == "ユーザー名" %>
-          <% if @customers.count == 0 %>
+<div class="page-color">
+  <div class="btn-wrapper container">
+    <div class="row">
+      <h1>検索結果</h1>
+      <div class="col-12 mx-auto">
+        <div class="content">
+          <h3 class="search-result"><strong>"<%= @word %>"</strong> の検索結果</h3>
+          <% if @range == "ユーザー名" %>
+            <% if @customers.count == 0 %>
+              <p>見つかりませんでした。</p>
+            <% else %>
+              <%= render 'public/relationships/customers_info', customers_info: @customers %>
+          <% end %>
+        </div>
+        <% else %>
+          <% if @exercises.count == 0 %>
             <p>見つかりませんでした。</p>
           <% else %>
-            <%= render 'public/relationships/customers_info', customers_info: @customers %>
+            <%= render 'public/exercises/index', exercises: @exercises %>
+          <% end %>
         <% end %>
       </div>
-      <% else %>
-        <% if @exercises.count == 0 %>
-          <p>見つかりませんでした。</p>
-        <% else %>
-          <%= render 'public/exercises/index', exercises: @exercises %>
-        <% end %>
-      <% end %>
     </div>
   </div>
 </div>
