--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -12,7 +12,7 @@
             <th><%= @customer.introduction %></th>
           </tr>
           <tr>
-            <th><%= @customer.email %></th>
+            <th>ユーザーID: <%= @customer.id %></th>
           </tr>
         </table>
         </div>
