--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,7 @@
   <div class="header_title"><h5 class="my-0 mr-md-auto font-weight-normal"><%= link_to "my_exercise", root_path, class: "text-warning" %></h5></div>
   <% if customer_signed_in? %>
     <div class="search"><%= render 'public/searches/search_form' %></div>
+    <div class="notification-button"><%= render 'public/notifications/notification_button' %></div>
   <% end %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -48,5 +49,5 @@
         </ul>
       </div>
     </div>
-    </nav>
+  </nav>
 </header>
