[fixed] layout_background_image

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -209,7 +209,7 @@ footer{
     position: relative;
     padding-bottom: 120px;
     box-sizing: border-box;
-    background-image: url(/public/images/jonathan-borba-zfPOelmDc-M-unsplash.jpg);
+    background-image: url('/images/jonathan-borba-zfPOelmDc-M-unsplash.jpg');
     background-size: cover;
 }
 
