fix layout and rename asset images

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -257,7 +257,7 @@ footer{
     position: relative;
     padding-bottom: 120px;
     box-sizing: border-box;
-    background-color: #E6FFE9;
+    background-color: #EEEEEE;
     background-size: cover;
 }
 
