--- a/app/views/public/favorites/_favorite.html.erb
+++ b/app/views/public/favorites/_favorite.html.erb
@@ -1,6 +1,6 @@
 <% if exercise.favorited_by?(current_customer) %>
   <%= link_to exercise_favorites_path(exercise), class: "text-danger", method: :delete, remote: true do %>
-    <%= image_tag 'マッチョアイコン5.jpeg' %>
+    <%= image_tag 'muscle5.jpg' %>
   <% end %>
   <%= link_to exercise_favorites_all_path(exercise), class: "text-info" do %>
     <% if exercise.favorites.count != 0 %>
@@ -11,7 +11,7 @@
 
 <% else %>
   <%= link_to exercise_favorites_path(exercise), class: "text-danger", method: :post, remote: true do %>
-    <%= image_tag 'マッチョのイラスト4.jpeg' %>
+    <%= image_tag 'muscle4.jpg' %>
   <% end %>
   <%= link_to exercise_favorites_all_path(exercise), class: "text-info" do %>
     <% if exercise.favorites.count != 0 %>
