[fix] exercise_new image_path

--- a/app/views/public/exercises/new.html.erb
+++ b/app/views/public/exercises/new.html.erb
@@ -14,7 +14,7 @@
                     <strong><%= current_customer.name %></strong>
                   </th>
                 <% else %>
-                  <th><%= image_tag asset_path('/assets/box3.jpg'), size: "100x67" %>
+                  <th><%= image_tag 'box3.jpg', size: "100x67" %>
                     <strong><%= current_customer.name %></strong>
                   </th>
                 <% end %>
