--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -14,6 +14,7 @@
           <tr>
             <th>ユーザーID: <%= @customer.id %></th>
           </tr>
+          <th>メールアドレス: <%= @customer.email %></th>
         </table>
         </div>
         <div class="col-10"><p class="admin-customer_style">ユーザーの状態</p>
